# Python-Embed-Demo

./: readme.md  readme.txt  run_cmake.ps1  run_msvc9.ps1  setup.cfg  setup.py  work_module.py  wrapper_inner.pyd  wrapper_inner.pyx  wrapper_inner_api.h  wrapper_outer.hpp
demo_embed/: CMakeLists.txt  sample_application.cpp
